[package]
name = "xclod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "string"] }
dialoguer = { version = "0.12.0", default-features = false }
directories = "6.0.0"
ffmpeg-sidecar = "2.5.2"
indicatif = "0.18.4"
rayon = "1.12.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
